src/App.css
.App {
  /* text-align: center; */
  background: linear-gradient();
}

.about-me{
  font-family: 'Cutive Mono', monospace;
  font-size: 50px;
  transform: translateY(-50%);
}


.me-paragraph{
  font-family: 'Cormorant Garamond', serif;
  font-size: 20px;
}

.header-container {
  height: 20vh;
  width: 100%;
}

.navigation-bar{
  display: flex;
  height: 20vh;
  width: auto;
  justify-content: center;
}

.navigation-bar a {
  padding-top: 100px ;
  padding-left: 10px;
  padding-right: 10px;
  display: inline-block;
}

.tetris {
  border: solid 5px #85D6FF;
  height: auto;
  width: 20vw;
  margin-left: 1%;
  margin-right: 1%;
}

.tetris-image{
  align-items: center;
}

.tetris-image img {
  height: 20vh;
  width: 15vw;
}

.ubike {
  border: solid 5px #85D6FF;
  height: auto;
  width: 20vw;
  align-items: center;
  margin-left: 1%;
  margin-right: 1%;
}

.ubike-image img{
  height: 25vh;
  width: 15vw;
  padding-left: 20px;
  padding-right: 20px;
}

.munch{
  border: solid 5px #85D6FF;
  height: auto;
  width: 20vw;
  align-items: center;
  margin-left: 1%;
  margin-right: 1%;
}


.flatiron-trivia {
  border: solid 5px #85D6FF;
  height: auto;
  width: 20vw;
  align-items: center;
  margin-left: 1%;
  margin-right: 1%;
}

.flatiron-trivia-image img {
  height: 25vh;
  width: 15vw;
  padding-left: 20px;
  padding-right: 20px;
}

.kl-finance {
  border: solid 5px #85D6FF;
  height: auto;
  width: 20vw;
  align-items: center;
  margin-left: 1%;
  margin-right: 1%;
}

.portfolio {
  border: solid 5px #85D6FF;
  height: auto;
  width: 20vw;
  align-items: center;
  margin-left: 1%;
  margin-right: 1%;
}

.projects-container {
  padding-left: 2%;
  padding-right: 2%;
  display: flex;
  flex-wrap: wrap;
}

.projects-container h2 {
  text-align: center;
}

.projects-container p {
  font-size: 18px;
  text-align: center;
}

.projects-container li {
  font-family: 'Cutive Mono', monospace;
  font-size: 15px;
}

.projects-header{
  text-align: center;
  font-size: 20px;
}

.profile-pic-container img {
  border-radius: 50%;
}

.description {
  font-family: 'Amiri', serif;
}

.design-credit {
  text-align: center;
}
/* 
.about {
  width: 100vw;
  height: 100vh;
  background-color: #2EC0F9;
} */

